--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "i18next": "^23.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-grid-layout": "^1.5.0",
     "react-i18next": "^15.1.0",
     "react-router-dom": "^6.27.0"
