--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "i18next": "^23.16.4",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
