--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "dataisec-platform-manager-backend",
+  "name": "dataisec-backend",
   "version": "1.0.0",
   "description": "Backend for DataISEC Platform Manager",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm run clean && npm run build:frontend",
+    "build:backend": "echo 'No build needed for backend'",
+    "build:frontend": "cd ../frontend && npm install && npm run build && mkdir -p ../backend/public && cp -r dist/* ../backend/public/",
+    "clean": "rm -rf public && mkdir public"
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.22.1",
@@ -14,7 +18,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
