complete the pod configuration upload and modification
read zipped template file, the zip file include the template yaml and files for helm chart deplyment.
enable filed entry and default values parser feature

--- a/backend/deploymentTemplate/dataisec-console-old/dataisec-console-template.yaml
+++ b/backend/deploymentTemplate/dataisec-console-old/dataisec-console-template.yaml
@@ -106,7 +106,7 @@ env:
   - name: COMPANY_NAME
     value: ${COMPANY_NAME} #[Dataisec]
   - name: SESSION_SECRET
-    value: ${SESSION_SECRET} #[secret123]
+    value: ${SESSION_SECRET} #[secret]
 
 # Application specific configurations can go here
 appConfig:
