--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,18 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.22.1",
+    "@monaco-editor/react": "^4.6.0",
     "@opensearch-project/opensearch": "^2.12.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "extract-zip": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
+    "tar": "^7.4.3",
     "uuid": "^10.0.0",
     "ws": "^8.2.3"
   },
