--- a/backend/deploymentTemplate/dataisec-console/config.json
+++ b/backend/deploymentTemplate/dataisec-console/config.json
@@ -40,9 +40,12 @@
     "1.0.1": {
       "createdAt": "2024-03-07T14:30:00Z",
       "updatedAt": "2024-03-07T14:30:00Z",
-      "config": {
-      }
+      "config": {}
     }
   },
-  "latestVersion": "1.0.1"
-} 
+  "latestVersion": "1.0.1",
+  "template": {
+    "content": "{}",
+    "updatedAt": "2024-11-06T14:38:52.467Z"
+  }
+}
