--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.1.5",
+    "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.5",
     "@mui/x-data-grid": "^7.22.0",
     "@mui/x-date-pickers": "^7.22.0",
@@ -29,6 +30,7 @@
     "react-dropzone": "^14.2.10",
     "react-grid-layout": "^1.5.0",
     "react-i18next": "^15.1.0",
+    "react-monaco-editor": "^0.56.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
