--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "tar": "^7.4.3",
     "uuid": "^10.0.0",
-    "ws": "^8.2.3"
+    "ws": "^8.2.3",
+    "yaml": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
