fix basic setup errors in console log

--- a/backend/deploymentTemplate/fluentd/config.json
+++ b/backend/deploymentTemplate/fluentd/config.json
@@ -1,6 +1,33 @@
 {
   "name": "fluentd",
-  "versions": {},
+  "versions": {
+    "1.0.0": {
+      "createdAt": "2024-11-09T18:18:53.703Z",
+      "updatedAt": "2024-11-09T18:18:53.703Z",
+      "config": {
+        "name": "fluentd",
+        "version": "1.0.0",
+        "namespace": "default",
+        "enableResourceQuota": false,
+        "resourceQuota": {
+          "requestsCpu": "1",
+          "requestsMemory": "1Gi",
+          "limitsCpu": "2",
+          "limitsMemory": "2Gi",
+          "pods": "10",
+          "configmaps": "10",
+          "pvcs": "5",
+          "services": "10",
+          "secrets": "10",
+          "deployments": "5",
+          "replicasets": "10",
+          "statefulsets": "5",
+          "jobs": "10",
+          "cronjobs": "5"
+        }
+      }
+    }
+  },
   "latestVersion": "1.0.0",
   "configurations": {
     "basic": {
