--- a/backend/deploymentTemplate/dataisec-console/config.json
+++ b/backend/deploymentTemplate/dataisec-console/config.json
@@ -1,40 +1,32 @@
 {
   "name": "dataisec-console",
-  "versions": {},
-  "latestVersion": "1.0.0",
-  "configurations": {
-    "basic": {
-      "name": "dataisec-console",
-      "namespace": "",
-      "replicas": 1
-    },
-    "template": {
-      "content": "",
-      "placeholders": {},
-      "defaultValues": {},
-      "categories": {}
-    },
-    "image": {
-      "repository": "",
-      "tag": "latest"
-    },
-    "resources": {
-      "limits": {
-        "cpu": "",
-        "memory": ""
-      },
-      "requests": {
-        "cpu": "",
-        "memory": ""
+  "versions": {
+    "1.0.0": {
+      "createdAt": "2024-11-09T18:13:25.880Z",
+      "updatedAt": "2024-11-09T18:13:25.880Z",
+      "config": {
+        "name": "dataisec-console",
+        "version": "1.0.0",
+        "namespace": "default",
+        "enableResourceQuota": false,
+        "resourceQuota": {
+          "requestsCpu": "1",
+          "requestsMemory": "1Gi",
+          "limitsCpu": "2",
+          "limitsMemory": "2Gi",
+          "pods": "10",
+          "configmaps": "10",
+          "pvcs": "5",
+          "services": "10",
+          "secrets": "10",
+          "deployments": "5",
+          "replicasets": "10",
+          "statefulsets": "5",
+          "jobs": "10",
+          "cronjobs": "5"
+        }
       }
-    },
-    "affinity": {},
-    "volumes": [],
-    "configMaps": [],
-    "secrets": []
+    }
   },
-  "template": {
-    "content": "# values.yaml\nname: dataisec-console\nreplicaCount: ${REPLICA_COUNT} #[1, 2, 3, 4, 5, 6]\n\nimage:\n  repository: ${REPOSITORY} #[localhost] #[5000, 5001]\n  tag: ${TAG} #[latest]\n  pullPolicy: IfNotPresent\n  insecureRegistry: true\n\nimagePullSecrets: []\nnameOverride: \"dataisec-console\"\nfullnameOverride: \"dataisec-console\"\n\n\nservice:\n  type: NodePort\n  port: ${SERVICE_PORT} #[3000]\n  targetPort: ${TARGET_SERVICE_PORT} #[3000]\n  nodePort: ${NODE_PORT} #[32000]\n\ningress:\n  enabled: false\n  className: \"\"\n  annotations: {}\n  hosts:\n    - host: chart-example.local\n      paths:\n        - path: /\n          pathType: ImplementationSpecific\n  tls: []\n\nresources:\n  limits:\n    cpu: ${CPU_LIMIT} #[1000m, 2000m, 3000m, 4000m, 5000m]\n    memory: ${MEMORY_LIMIT} #[2Gi]\n  requests:\n    cpu: ${CPU_REQUEST} #[100m, 200m, 300m, 400m, 500m]\n    memory: ${MEMORY_REQUEST} #[128Mi]\n\nautoscaling:\n  enabled: false\n  minReplicas: 1\n  maxReplicas: 1\n  targetCPUUtilizationPercentage: 80\n  targetMemoryUtilizationPercentage: 80\n\nserviceAccount:\n  create: true\n  annotations: {}\n  name: \"dataisec\"\n\npodAnnotations: {}\n\npodSecurityContext: {}\n  # fsGroup: 2000\n\nsecurityContext: {}\n  # capabilities:\n  #   drop:\n  #   - ALL\n  # readOnlyRootFilesystem: true\n  # runAsNonRoot: true\n  # runAsUser: 1000\n\nlivenessProbe:\n  enabled: true\n  httpGet:\n    path: /\n    port: 3000\n    scheme: HTTPS\n  initialDelaySeconds: 30  # 从默认的10秒增加到60秒\n  periodSeconds: 20\n  timeoutSeconds: 5\n  failureThreshold: 10\n  successThreshold: 1\n\nreadinessProbe:\n  enabled: true\n  httpGet:\n    path: /\n    port: 3000\n    scheme: HTTPS\n  periodSeconds: 20\n  initialDelaySeconds: 60  # 从默认的10秒增加到60秒\n  timeoutSeconds: 5\n  failureThreshold: 10\n  successThreshold: 1\n\n\nnodeSelector:\n  kubernetes.io/hostname: ${NODE_SELECTOR} #[{node-role.opensearch: master}]\n\ntolerations: []\n\naffinity: {}\n\n# Custom environment variables for your application\nenv:\n  - name: SITE_NODE\n    value: ${SITE_NODE} #[localhost]\n  - name: WEB_PORT\n    value: ${WEB_PORT} #[3000]\n  - name: DB_NODE\n    value: https://opensearch-cluster-master-headless.opensearch.svc.cluster.local:9200\n  - name: COMPANY_NAME\n    value: ${COMPANY_NAME} #[Dataisec]\n  - name: SESSION_SECRET\n    value: ${SESSION_SECRET} #[secret]\n\n# Application specific configurations can go here\nappConfig:\n  featureFlagA: true\n  maxConnections: 100\n",
-    "updatedAt": "2024-11-07T14:56:38.518Z"
-  }
+  "latestVersion": "1.0.0"
 }
