--- a/backend/deploymentTemplate/dataisec-console/config.json
+++ b/backend/deploymentTemplate/dataisec-console/config.json
@@ -2,12 +2,18 @@
   "name": "dataisec-console",
   "versions": {
     "1.0.0": {
-      "createdAt": "2024-11-09T18:13:25.880Z",
-      "updatedAt": "2024-11-09T18:13:25.880Z",
+      "createdAt": "2024-11-09T19:03:37.735Z",
+      "updatedAt": "2024-11-09T19:03:37.735Z",
       "config": {
         "name": "dataisec-console",
-        "version": "1.0.0",
         "namespace": "default",
+        "templatePath": "",
+        "yamlConfig": null,
+        "resources": {},
+        "affinity": {},
+        "volumes": [],
+        "configMaps": [],
+        "secrets": [],
         "enableResourceQuota": false,
         "resourceQuota": {
           "requestsCpu": "1",
@@ -24,9 +30,47 @@
           "statefulsets": "5",
           "jobs": "10",
           "cronjobs": "5"
-        }
+        },
+        "version": "1.0.0",
+        "createdAt": "2024-11-09T19:03:37.732Z",
+        "updatedAt": "2024-11-09T19:03:37.732Z"
+      }
+    },
+    "1.0.1": {
+      "createdAt": "2024-11-09T19:06:50.489Z",
+      "updatedAt": "2024-11-09T19:06:50.489Z",
+      "config": {
+        "name": "dataisec-console",
+        "namespace": "default",
+        "templatePath": "",
+        "yamlConfig": null,
+        "resources": {},
+        "affinity": {},
+        "volumes": [],
+        "configMaps": [],
+        "secrets": [],
+        "enableResourceQuota": false,
+        "resourceQuota": {
+          "requestsCpu": "1",
+          "requestsMemory": "1Gi",
+          "limitsCpu": "2",
+          "limitsMemory": "2Gi",
+          "pods": "10",
+          "configmaps": "10",
+          "pvcs": "5",
+          "services": "10",
+          "secrets": "10",
+          "deployments": "5",
+          "replicasets": "10",
+          "statefulsets": "5",
+          "jobs": "10",
+          "cronjobs": "5"
+        },
+        "version": "1.0.1",
+        "createdAt": "2024-11-09T19:06:50.482Z",
+        "updatedAt": "2024-11-09T19:06:50.482Z"
       }
     }
   },
-  "latestVersion": "1.0.0"
+  "latestVersion": "1.0.1"
 }
