--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
+    "semver": "^7.6.3",
     "tar": "^7.4.3",
     "uuid": "^10.0.0",
     "winston": "^3.16.0",
