affinity, storage and repository data now now save to config.json

--- a/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-storageClass.yaml
+++ b/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-storageClass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: dataisec-console-1.0.6-storageclass
+  name: dataisec-console-storageclass
 provisioner: kubernetes.io/no-provisioner
 reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
