--- a/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
+++ b/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
@@ -7,11 +7,11 @@ metadata:
 spec:
   capacity:
     storage: 1Gi
-  volumeMode: Filesystem
+  volumeMode: Block
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: dataisec-console-1.0.6-storageclass
+  storageClassName: dataisec-console-storageclass
   local:
     path: /data
   nodeAffinity:
@@ -21,4 +21,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - 
+          - kind-control-plane
