--- a/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
+++ b/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
@@ -21,29 +21,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - 
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: dataisec-console-pv01
-  labels:
-    type: local
-spec:
-  capacity:
-    storage: 1Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: dataisec-console-storageclass
-  local:
-    path: /data
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - 
+          - kind-worker2
