complete the configmap configuration

--- a/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
+++ b/backend/deploymentTemplate/dataisec-console/storage/dataisec-console-1.0.6-persistentVolumes.yaml
@@ -6,7 +6,32 @@ metadata:
     type: local
 spec:
   capacity:
-    storage: 1Gi
+    storage: 100Gi
+  volumeMode: Block
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: dataisec-console-storageclass
+  local:
+    path: /data
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - kind-control-plane
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: dataisec-console-pv01
+  labels:
+    type: local
+spec:
+  capacity:
+    storage: 100Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
