--- a/backend/deploymentTemplate/dataisec-console/deploy-scripts/dataisec-console-1.0.6-configmap.yaml
+++ b/backend/deploymentTemplate/dataisec-console/deploy-scripts/dataisec-console-1.0.6-configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: dataisec-console-keyvalue-cm
-  namespace: default123
+  namespace: dataisec
 data:
   asas: ass
