--- a/backend/deploymentTemplate/dataisec-console/deploy-scripts/dataisec-console-1.0.6-quota.yaml
+++ b/backend/deploymentTemplate/dataisec-console/deploy-scripts/dataisec-console-1.0.6-quota.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ResourceQuota
 metadata:
   name: dataisec-console-quota
-  namespace: default123
+  namespace: dataisec
 spec:
   hard:
     requests.cpu: "1000m"
     requests.memory: "256Mi"
-    limits.cpu: "2000m"
+    limits.cpu: "4000m"
     limits.memory: "4Gi"
     pods: "2"
     configmaps: "3"
