--- a/k8s/dataisec-platform/templates/pvc.yaml
+++ b/k8s/dataisec-platform/templates/pvc.yaml
@@ -1,11 +1,23 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: {{ .Values.backend.name }}-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: {{ .Values.backend.storage.size | default "10Gi" }}
+  storageClassName: local-storage
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: {{ .Values.backend.name }}-templates-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.backend.storage.size | default "1Gi" }}
-  storageClassName: {{ .Values.backend.storage.className | default "standard" }}
+      storage: {{ .Values.backend.storage.templates.size | default "1Gi" }}
+  storageClassName: local-storage
