--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "cd backend && npm start",
     "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\"",
-    "build": "npm run build:clean && npm run build:frontend && npm run build:copy",
-    "build:clean": "cd backend && rm -rf public && mkdir public",
+    "build": "npm run build:clean && npm run build:frontend && npm run build:backend",
+    "build:clean": "rm -rf backend/public/*",
     "build:frontend": "cd frontend && npm run build",
-    "build:copy": "cp -r frontend/dist/* backend/public/",
+    "build:backend": "cp -r frontend/dist/* backend/public/",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "devDependencies": {
