fix the login url parse error

--- a/deployment-scripts/single-image-configmap.yaml
+++ b/deployment-scripts/single-image-configmap.yaml
@@ -6,7 +6,7 @@ data:
   CONTAINER_RUNTIME: "nerdctl"
   CONTAINER_NAMESPACE: "k8s.io"
   VITE_API_BASE_URL: "http://192.168.170.126:30002" 
-  API_BASE_URL:  "http://192.168.125.168:3001"# 請替換為正確的服務 URL
+  API_BASE_URL:  "http://192.168.170.126:3001" # replace with the target service url
   JWT_EXPIRES_IN: "24h"
   OPENSEARCH_URL: "https://192.168.170.126:9200"
   OPENSEARCH_HOST: "192.168.170.126"
