--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
     "echarts-for-react": "^3.0.2",
     "i18next": "^23.16.4",
     "notistack": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.10",
     "react-grid-layout": "^1.5.0",
     "react-i18next": "^15.1.0",
@@ -34,13 +34,13 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.9",
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
     "@eslint/js": "^9.13.0",
     "@types/node": "^22.8.6",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
