now we see log in production environment now

--- a/.env_sample
+++ b/.env_sample
@@ -41,8 +41,14 @@ WS_HEARTBEAT_INTERVAL=30000
 #KUBECONFIG=/etc/kubernetes/admin.conf
 #KUBERNETES_SERVICE_HOST=https://kubernetes.default.svc
 KUBECONFIG=/Users/wangcide/.kube/config
+
 # 或使用服務賬號令牌（推薦用於生產環境）
 KUBERNETES_SERVICE_HOST=https://kubernetes.default.svc
 KUBERNETES_SERVICE_PORT=443
 KUBERNETES_SERVICE_ACCOUNT_TOKEN_PATH=/var/run/secrets/kubernetes.io/serviceaccount/token
 KUBERNETES_CA_CERT_PATH=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+
+# 容器運行時配置
+CONTAINER_RUNTIME=docker    # 可選值: docker 或 nerdctl
+CONTAINER_NAMESPACE=k8s.io  # 僅在使用 nerdctl 時需要
+NODE_NAME=192.168.170.126  # Kubernetes 節點名稱，需要與 nodeSelector 中的 hostname 匹配
