--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "rimraf": "^6.0.1"
   }
 }
