--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "dev": "nodemon server.js",
-    "build": "npm run clean && npm run build:frontend",
+    "clean": "rimraf public dist && mkdir public",
+    "clean:modules": "rimraf node_modules package-lock.json",
+    "build": "npm run clean && npm run build:fresh",
+    "build:fresh": "npm run clean:modules && npm install && npm run build:frontend",
     "build:backend": "echo 'No build needed for backend'",
-    "build:frontend": "cd ../frontend && npm install && npm run build && mkdir -p ../backend/public && cp -r dist/* ../backend/public/",
-    "clean": "rm -rf public && mkdir public"
+    "build:frontend": "cd ../frontend && npm run clean:modules && npm install && npm run build && mkdir -p ../backend/public && cp -r dist/* ../backend/public/",
+    "prebuild": "npm run clean"
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.22.2",
@@ -32,6 +35,7 @@
     "yaml": "^2.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "rimraf": "^5.0.0"
   }
 }
