--- a/deployment.yaml
+++ b/deployment.yaml
@@ -84,7 +84,9 @@ spec:
       serviceAccountName: dataisec-pod-management-sa
       containers:
       - name: dataisec-pod-management
-        image:dataisec-pod-management:latest
+        image: dataisec-pod-management:latest
+        securityContext:
+          privileged: true
         ports:
         - containerPort: 3001
         resources:
@@ -102,6 +104,8 @@ spec:
         - name: k8s-certs
           mountPath: /var/run/secrets/kubernetes.io/serviceaccount
           readOnly: true
+        - name: containerd-sock
+          mountPath: /var/run/containerd/containerd.sock
       volumes:
       - name: config-volume
         configMap:
@@ -120,6 +124,10 @@ spec:
               items:
               - key: ca.crt
                 path: ca.crt
+      - name: containerd-sock
+        hostPath:
+          path: /run/containerd/containerd.sock
+          type: Socket
 ---
 apiVersion: v1
 kind: Service
@@ -145,4 +153,4 @@ spec:
   ports:
   - port: 9200
     targetPort: 9200
-  type: ClusterIP 
+  type: ClusterIP
