--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "vite",
-    "build": "vite build --mode production",
+    "build": "npm run clean && vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -46,6 +47,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "rimraf": "^5.0.10",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
